[gd_scene load_steps=4 format=3 uid="uid://dg7fmx5ubnavf"]

[ext_resource type="Script" path="res://scenes/skills/launch_projectile.gd" id="1_plx8p"]
[ext_resource type="PackedScene" uid="uid://bqp6714c5407y" path="res://scenes/generics/projectile.tscn" id="2_icjp4"]
[ext_resource type="Texture2D" uid="uid://cfe8m4rupolhw" path="res://icon.svg" id="3_lq677"]

[node name="launch_projectile" type="Node2D"]
script = ExtResource("1_plx8p")
fire_rate = 0.05
projectile_speed = 10
number_of_projectiles = 5
cooldown_time = 2.0
skill_type = 0

[node name="projectile" parent="." instance=ExtResource("2_icjp4")]

[node name="Icon" type="Sprite2D" parent="projectile"]
position = Vector2(2.38419e-07, 2.38419e-07)
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_lq677")

[node name="cooldown_timer" type="Timer" parent="."]
one_shot = true

[connection signal="cooldown_finished" from="." to="." method="_on_cooldown_finished"]
[connection signal="cooldown_started" from="." to="." method="_on_cooldown_started"]
[connection signal="timeout" from="cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
